ingress/kube-state-metrics/kube-state-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-metrics-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/kube-state-metrics)$ $1/ redirect;
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /kube-state-metrics(/|$)(.*)
          backend:
            service:
              name: kube-state-metrics
              port:
                number: 8080
